force-app/main/default/objects/Contact/fields/Filiation__c.field-meta.xml
<CustomField>
    <fullName>Filiation__c</fullName>
    <label>Parenté</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Fils</fullName>
                <label>Enfant</label>
            </value>
            <value>
                <fullName>Conjoint</fullName>
                <label>Conjoint(e)</label>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>Concubin(e)</fullName>
            </value>
            <value>
                <fullName>Ex-Conjoint(e)</fullName>
            </value>
            <value>
                <fullName>Conjointe</fullName>
                <isActive>false</isActive>
                <label>Conjointe</label>
            </value>
            <value>
                <fullName>Fille</fullName>
                <isActive>false</isActive>
                <label>Fille</label>
            </value>
            <value>
                <fullName>Frère</fullName>
                <isActive>false</isActive>
                <label>Frère/Soeur</label>
            </value>
            <value>
                <fullName>Soeur</fullName>
                <isActive>false</isActive>
                <label>Soeur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>