force-app/main/default/objects/Contact/fields/Magazine__c.field-meta.xml
<CustomField>
    <fullName>Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magazine</label>
    <type>Checkbox</type>
</CustomField>