force-app/main/default/objects/Contact/fields/Numero_de_securite_sociale__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_securite_sociale__c</fullName>
    <label>Numero de sécurité sociale</label>
    <length>15</length>
    <type>Text</type>
</CustomField>