force-app/main/default/objects/Contact/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>vlocity_ins__PaymentMethod__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>