force-app/main/default/objects/Contact/fields/Policyholder__c.field-meta.xml
<CustomField>
    <fullName>Policyholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policyholder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ayants droits</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <type>Lookup</type>
</CustomField>