force-app/main/default/objects/Contact/fields/WebSiteId__c.field-meta.xml
<CustomField>
    <fullName>WebSiteId__c</fullName>
    <externalId>true</externalId>
    <label>WebSiteId</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>