force-app/main/default/objects/Contact/recordTypes/Ayant_droit.recordType-meta.xml
<RecordType>
    <fullName>Ayant_droit</fullName>
    <active>true</active>
    <label>Ayant droit</label>
</RecordType>