force-app/main/default/objects/Contact/recordTypes/Ayant_droit_archiv.recordType-meta.xml
<RecordType>
    <fullName>Ayant_droit_archiv</fullName>
    <active>true</active>
    <label>Ayant droit archivé</label>
</RecordType>