force-app/main/default/objects/Contact/validationRules/InvalidSocialSecurityNumber_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidSocialSecurityNumber_Contact</fullName>
    <active>true</active>
    <description>Numéro de sécurité sociale erroné</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Numero_de_securite_sociale__c)),IF( BEGINS( Numero_de_securite_sociale__c ,&apos;1&apos;) ,
IF( ISPICKVAL(Salutation , &apos;Mr.&apos;),
IF( VALUE(RIGHT(TEXT(YEAR(Birthdate)),2))== VALUE(MID(Numero_de_securite_sociale__c,2,2)) ,
IF(MONTH( Birthdate) == VALUE(MID(Numero_de_securite_sociale__c,4,2) ),
false,
true) ,
true) ,
true) ,
IF( BEGINS( Numero_de_securite_sociale__c , &apos;2&apos;) ,
IF( ISPICKVAL(Salutation , &apos;Mme.&apos;) ,
IF( VALUE(RIGHT(TEXT(YEAR(Birthdate)),2)) == VALUE(MID(Numero_de_securite_sociale__c,2,2)) ,
IF( MONTH( Birthdate) == VALUE(MID(Numero_de_securite_sociale__c,4,2)
),
false,
true) ,
true) ,
true),
true)))</errorConditionFormula>
    <errorDisplayField>Numero_de_securite_sociale__c</errorDisplayField>
    <errorMessage>Ce numéro de sécurité sociale est invalide.</errorMessage>
</ValidationRule>